OpenLayer tiles flicker when loading in Chrome(ium)   - FIX: disable transition in chrome

--- a/plugins/org.polymap.openlayers.rap.widget/openlayers/full/theme/default/style.css
+++ b/plugins/org.polymap.openlayers.rap.widget/openlayers/full/theme/default/style.css
@@ -509,10 +509,12 @@ a.olControlZoomOut {
 /**
  * Animations
  */
-
 .olLayerGrid .olTileImage {
-    -webkit-transition: opacity 0.2s linear;
-    -moz-transition: opacity 0.2s linear;
-    -o-transition: opacity 0.2s linear;
+    /* commented out because Chromium flickers when loading tiles if "Hardware acceleration"
+     * https://code.google.com/p/chromium/issues/detail?id=325236
     transition: opacity 0.2s linear;
+    -webkit-transition: opacity 0.2s linear; 
+    */
+    -moz-transition: opacity 0.5s linear;
+    -o-transition: opacity 0.5s linear;
 }
